Bug 1327185 - Part 1: Refine EventStateManager::FireDragEnterOrExit. r=smaug

MozReview-Commit-ID: Fa8ayrThz4V